# hexagon

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: push.yml  release.yaml  rust.yml
src/: encryption.rs  main.rs
src/cli/: cli.rs  cli.yaml  interface.rs  tasks.rs
src/crypto/: errors.rs  mod.rs
src/crypto/aes/: aes.rs  encryption.rs  key.rs  mod.rs
src/crypto/asymmetric/: encryption.rs  keygen.rs  mod.rs  rsa.rs
src/crypto/rsa/: cryptor.rs  keygen.rs  mod.rs
src/crypto/symmetric/: encryption.rs  mod.rs  xsalsapoly.rs
src/encryption/: aes.rs  encryption.rs  errors.rs  key.rs
src/filesys/: errors.rs
src/rsa/: cryptor.rs  keygen.rs
