[package]
authors = ["ocramh <ocramh11@gmail.com>"]
edition = "2018"
name = "hexagon"
version = "0.1.0"

[dependencies]
anyhow = "1.0.33"
base64 = "^0.13"
clap = {version = "2.34.0", features = ["yaml"]}
openssl = {version = "0.10", features = ["vendored"]}
rand = "^0.8"
sodiumoxide = "0.2.6"
thiserror = "1.0.21"
